--- a/YumYumDeliv/yum_deliv/static/css/operator.css
+++ b/YumYumDeliv/yum_deliv/static/css/operator.css
@@ -2,8 +2,40 @@ body {
     font-family: 'Arial', sans-serif;
 }
 
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    background-color: #38A9CC;
+    padding: 10px 0;
+    width: 100%;
+}
+
+.navbar img {
+    max-width: 100%;
+    height: auto;
+    display: inline-block;
+    margin: 0 auto;
+}
+
+.exit-link {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    float: right;
+    margin-top: 30px;
+    font-size: 24px;
+}
+
+
+
 .container-fluid {
     margin-top: 20px;
+    margin-right: 0;
+    margin-left: 0;
+}
+
+.container{
+
 }
 
 .card-header h2 {
