--- a/YumYumDeliv/yum_deliv/static/css/resataurant.css
+++ b/YumYumDeliv/yum_deliv/static/css/resataurant.css
@@ -1,68 +1,256 @@
 body {
-            font-family: 'Arial', sans-serif;
-            margin: 20px;
-        }
+    font-family: 'Arial', sans-serif;
+}
 
-        h1, h2 {
-            color: #4CAF50;
-        }
+h1, h2 {
+    color: #4CAF50;
+}
 
-        #dishes-list {
-            list-style: none;
-            padding: 0;
-        }
+#dishes-list {
+    list-style: none;
+    padding: 0;
+}
 
-        #dishes-list li {
-            margin-bottom: 20px;
-        }
+#dishes-list li {
+    margin-bottom: 20px;
+    border: 1px solid #ddd; /* Рамка вокруг блюда */
+    border-radius: 8px; /* Закругление углов */
+    overflow: hidden;
+}
 
-        #dishes-list img {
-            width: 100%;
-            max-width: 400px;
-            height: auto;
-        }
+#dishes-list img {
+    width: 150px;
+    height: 120px;
+    border-bottom: 1px solid #ddd; /* Рамка между изображением и информацией о блюде */
+    border-radius: 8px; /* Закругление верхних углов изображения */
+}
 
-        #cart-list {
-            list-style: none;
-            padding: 0;
-        }
+.rest-logo {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    border-radius: 36px;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
 
-        #cart-list li {
-            margin-bottom: 20px;
-        }
+.rest-logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
-        #cart-list img {
-            width: 100px;
-            height: 75px;
-            margin-right: 10px;
-        }
+h1.rest-title {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 0;
+    padding: 10px 30px 250px;
+    color: white;
+    font-size: 48px;
+    width: 100%;
+    box-sizing: border-box;
+    z-index: 1;
+}
 
-        .dish-info {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-top: 10px;
-        }
+.rest-logo::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%; /* Adjust this value to control the darkness extent */
+    height: 100%;
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)); /* Adjust the gradient as needed */
+    z-index: 1;
+}
 
-        .dish-quantity {
-            width: 40px;
-            text-align: center;
-        }
+.dish-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 10px;
+}
 
-        #btn_place, #btn_clear {
-            background-color: #4CAF50;
-            color: #fff;
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
+.dish-info strong {
+    color: #333; /* Цвет названия блюда */
+}
 
-        #btn_clear {
-            background-color: #f44336;
-        }
+.dish-quantity {
+    width: 40px;
+    text-align: center;
+}
 
-        #btn_place:hover, #btn_clear:hover {
-            background-color: #45a049;
-        }
+/* Стили для элементов корзины */
+#cart-list {
+    list-style: none;
+    padding: 0;
+}
+
+.cart-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.cart-item img {
+    width: 50px;
+    height: 50px;
+    border-radius: 4px;
+    margin-right: 10px;
+}
+
+.cart-item-details {
+    display: flex;
+    flex-direction: column; /* Изменено на вертикальное расположение элементов */
+    align-items: center;
+}
+
+.cart-item-name {
+    font-weight: bold;
+    margin-bottom: 10px; /* Добавлен отступ между именем и счетчиком */
+}
+
+.cart-item-counter {
+    display: flex;
+    align-items: center;
+    flex-direction: row; /* Изменено на горизонтальное расположение элементов */
+}
+
+.cart-item-counter button {
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.cart-item-counter input {
+    margin: 0 5px;
+    padding: 5px;
+    text-align: center;
+    width: 30px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    max-width: 40px; /* Оптимизированная максимальная ширина */
+}
+
+#cart-list li {
+    margin-bottom: 20px;
+}
+
+#cart-list img {
+    width: 50px; /* Размер изображения блюда */
+    height: 50px;
+    margin-right: 10px;
+    border-radius: 8px; /* Закругление углов изображения в корзине */
+}
+
+.cart-item-price {
+    font-size: 14px;
+    color: #4CAF50; /* Зеленый цвет для цены */
+}
+
+.cart-item-weight {
+    font-size: 12px;
+    color: #555; /* Серый цвет для веса */
+}
+
+#cart-body {
+    width: 15%;
+    position: sticky;
+    top: 20px;
+    z-index: 1;
+    height: 100px;
+    margin-left: auto;
+}
+
+#btn_place, #btn_clear {
+    background-color: #4CAF50;
+    color: #fff;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#btn_clear {
+    background-color: #f44336;
+}
+
+#btn_place:hover, #btn_clear:hover {
+    background-color: #45a049;
+}
+
+#navigation {
+    width: 15%; /* Убрал max-width и добавил width */
+    position: sticky;
+    top: 20px;
+    z-index: 1;
+    padding: 40px 0px 0px 30px;
+    height: 100px;
+}
+
+#main-content {
+    width: 80%;
+    margin-top: 30px;
+    margin-left: 0; /* Обнуляем отступ слева, так как main-content теперь занимает все оставшееся пространство */
+}
+
+.center_content {
+    align-items: center;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between; /* Добавил выравнивание контейнера по горизонтали */
+}
+
+.dish-container {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.dish-photo {
+    max-width: 400px;
+    max-height: 400px;
+    margin-top: 10px;
+    width: auto;
+    height: auto;
+}
+
+.dish-info {
+    margin-top: 10px;
+}
+
+.dish-price {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.dish-name {
+    font-size: 16px;
+}
+
+.dish-weight {
+    font-size: 14px;
+    color: #555;
+}
+
+.add-to-cart-button {
+    width: 100%;
+    margin-top: 10px;
+    padding: 8px 16px;
+    background-color: white;
+    color: black;
+    border: #989898;
+    border-radius: 4px;
+    cursor: pointer;
+}
