--- a/YumYumDeliv/yum_deliv/templates/Homepage.html
+++ b/YumYumDeliv/yum_deliv/templates/Homepage.html
@@ -8,181 +8,60 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css"/>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-        crossorigin="anonymous">
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+          crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=f40eb2dc-380d-4826-8076-4c07290dc00b&lang=ru_RU" type="text/javascript"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=f40eb2dc-380d-4826-8076-4c07290dc00b&lang=ru_RU"
+            type="text/javascript"></script>
 </head>
-
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/a3c8b6e52c.js" crossorigin="anonymous"></script>
-    <header class="header-main">
-        <nav class="navbar">
-            <div class="row">
-                    <div class="col logo-compani">
-                        <a href="/" class="navbar-brand"><img class="logo" src="../static/res/logo.png" /></a>
-                    </div>
-                    <div class="col search-back">
-                        <div class="text-field">
-                            <div class="text-field__icon text-field__icon_search">
-                                <input class="text-field__input" type="search" placeholder="Найти ресторан"
-                                    width="38px">
-                                <button type="button" class="btn btn-primary">Поиск</button>
-                            </div>
-                        </div>
-                    </div>
-                        <div class="col address-container" style="max-width: 250px">
-                            <div class="dropdown">
-                                <button class="dropbtn" id="savedAddressesBtn">Указать адрес</button>
-                                <div class="menu" id="menu-address">
-                                    <ul>
-                                        <li><p id="add-address">Добавить адрес</p></li>
-                                        {% for adr in address %}
-                                            <li><p class="dropdown-item" data-type="user-address">{{ adr.streetAndNumber }}</p></li>
-                                        {% endfor %}
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    <div class="col cart-container">
-                        <button class="dropbtn" id="cart-btn">{{ cost_cart }} ₽</button>
-                        <div class="cart" id="cart">
-                            {% for item in cart %}
-                                {% for dish in item %}
-                                    <p data-dish-id="{{ dish.id }}">
-                                        {{ dish.name }} - {{ dish.quantity }} - {{ dish.cost }}
-                                        <button class="delete-btn" onclick="removeItem('{{ dish.id }}')">Удалить</button>
-                                    </p>
-                                {% endfor %}
-                            {% endfor %}
-                            <p data-total-cost>Total Cost: {{ cost_cart }}</p>
-                        </div>
-                    </div>
-                    <div class="col avatar-user">
-                        <div class="avatar-container">
-                            {% if user != None %}
-                                {% for us in user %}
-                                    {% if us.image %}
-                                        <img src="{{ us.image }}" alt="User Avatar" class="avatar" id="avatar-custom">
-                                    {% else %}
-                                        <img src="https://sun9-34.userapi.com/impg/_ApH2UZSWSf9IaPtbXoXLSh20Ghpp12OqEo1_w/U0WAp4LnwgM.jpg?size=604x604&quality=95&sign=566b6ecf3dfb2b8b9a8e4d7a4022a86d&c_uniq_tag=ITcVtKV4QWIcQBwvc_5otZExmn3-mRmqDNz7iKGjEDM&type=album"
-                                             alt="Default Avatar" class="avatar" id="avatar">
-                                    {% endif %}
-                                {% endfor %}
-                                <div class="menu" id="menu">
-                                    <ul>
-                                        <li><label class="dropdown-item" id="my-data-btn">Мои данные</label></li>
-                                        <li><a class="dropdown-item" href="/orders/{{ user.0.uid }}">Мои заказы</a></li>
-                                        <li><label class="dropdown-item" id="my-address-btn">Мой адреса</label></li>
-                                        <li><a class="dropdown-item" id="logout-btn">Выйти</a></li>
-                                    </ul>
-                                </div>
-                            {% else %}
-                                <img src="https://sun9-34.userapi.com/impg/_ApH2UZSWSf9IaPtbXoXLSh20Ghpp12OqEo1_w/U0WAp4LnwgM.jpg?size=604x604&quality=95&sign=566b6ecf3dfb2b8b9a8e4d7a4022a86d&c_uniq_tag=ITcVtKV4QWIcQBwvc_5otZExmn3-mRmqDNz7iKGjEDM&type=album"
-                                     alt="Default Avatar" class="avatar" id="avatar-anonim">
-                                <div class="menu" id="menu-anonim">
-                                    <ul>
-                                        <li><a class="dropdown-item" href="{% url 'log' %}">Войти</a></li>
-                                    </ul>
-                                </div>
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>
-        </nav>
-    </header>
-    <div class="container">
-        <h1 id="main-title">Все рестораны</h1>
-        <div class="div">
-            <a href="#" data-type="0">Все</a>
-            {% for type_res in type_rests %}
-                {% if forloop.counter <= 3 %}
-                    <a href="#" data-type="{{ type_res.id }}">{{ type_res.type }}</a>
-                {% else %}
-                    {% if forloop.counter == 4 %}
-                    <div class="dropdown">
-                        <button class="dropbtn">Ещё</button>
-                        <div class="dropdown-content">
-                            {% endif %}
-                            <a href="#" data-type="{{ type_res.id }}">{{ type_res.type }}</a>
-                            {% if forloop.last %}
-                        </div>
-                    </div>
-                    {% endif %}
+<script src="https://kit.fontawesome.com/a3c8b6e52c.js" crossorigin="anonymous"></script>
+<header class="header-main">
+    <nav class="navbar">
+        <div class="row" style="align-items: center;">
+            {% block header %}{% include 'header_template.html' %}{% endblock %}
+        </div>
+    </nav>
+</header>
+<div class="container">
+    <h1 id="main-title">Все рестораны</h1>
+    <div class="div">
+        <a class="type-rest" id="all_rest" href="#" data-type="0">Все</a>
+        {% for type_res in type_rests %}
+        {% if forloop.counter <= 3 %}
+        <a class="type-rest" href="#" data-type="{{ type_res.id }}">{{ type_res.type }}</a>
+        {% else %}
+        {% if forloop.counter == 4 %}
+        <div class="dropdown">
+            <button class="dropbtn">Ещё</button>
+            <div class="dropdown-content">
                 {% endif %}
-            {% endfor %}
-        </div>
-        <div class="restaurant-block">
-            {% for restaurant in restaurants %}
-            <div class="restaurant-item" data-type="{{ restaurant.type }}">
-                <img class="photo-rest" src="{{ restaurant.image }}" alt="{{ restaurant.name }} image">
-                <h2 onclick="location.href='/restaurant/{{ restaurant.url_address }}'">{{ restaurant.name }}</h2>
+                <a href="#" data-type="{{ type_res.id }}">{{ type_res.type }}</a>
+                {% if forloop.last %}
             </div>
-            {% endfor %}
         </div>
-    </div>
-    <div id="address-dialog">
-        {% if user != None %}
-            {% for us in user %}
-                <form id="user_add_address" method="post" action="/user_add_address/{{ us.uid }}">
-                    {% csrf_token %}
-                    <input required id="typedataSuggestions" name="address" class="address-input" type="search" spellcheck="false" autocorrect="off" autocomplete="off" autocapitalize="off" placeholder="Укажите адрес">
-                    <i id="map-marker" class="fa-regular fa-map" onclick="$('#map-dialog').show();"></i>
-
-                    <div class="address-input-group">
-                        <input id="flat" name="flat" type="number" placeholder="Квартира" required>
-                        <input id="intercom" name="intercom" type="number" placeholder="Домофон" required>
-                        <input id="entrance" name="entrance" type="number" placeholder="Подъезд" required>
-                        <input id="floor" name="floor" type="number" placeholder="Этаж" required>
-                    </div>
-                     <div id="map-dialog" style="display: none;">
-                        <div id="map" style="height: 300px;"/>
-                     </div>
-                    <button id="close-address-dialog" type="button">Закрыть</button>
-                    <button id="save-address-dialog" type="submit">Сохранить адрес</button>
-                </form>
-            {% endfor %}
         {% endif %}
-        </div>
-    </div>
-
-    <div id="user-data-dialog">
-        <div class="user-input-group">
-             {% if user != None %}
-                {% for us in user %}
-                <form id="user-data-form" action="update_user_data/{{ us.uid }}" method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                        <input id="name" type="text" name="name" placeholder="Имя" value="{{us.name}}"><br>
-                        <input id="surname" type="text" name="surname" placeholder="Фамилия" value="{{us.surname}}"><br>
-                        <input id="middle-name" type="text" name="middle-name" placeholder="Отчетсво(При наличии)" value="{{us.middle_name}}"><br>
-                        <input type="file" id="photo_client" name="photo_client" accept="image/*" onchange="handleImageUpload()"><br>
-                        <div id="image-preview-container">
-                            <img id="image-preview" src="{{ us.image }}" alt="Preview" style="max-width: 300px; max-height: 300px;">
-                        </div>
-                        <button id="close-data-dialog" type="button">Закрыть</button>
-                        <button id="save-data-dialog" type="submit">Сохранить данные</button>
-                </form>
-                {% endfor %}
-            {% endif %}
-        </div>
-    </div>
-
-    <div class="menu" id="dialog-all-address">
-        {% for adr in address%}
-            <p class="dropdown-item" data-type="user-address">{{ adr.streetAndNumber }}</p>
-            <button onclick="deleteAddress('{{ adr.id }}', '{{ adr.streetAndNumber }}')">Удалить адрес</button>
+        {% endif %}
         {% endfor %}
     </div>
+    <div class="restaurant-block">
+        {% for restaurant in restaurants %}
+        <div class="restaurant-item" data-type="{{ restaurant.type }}" onclick="location.href='/restaurant/{{ restaurant.url_address }}'">
+            <img class="photo-rest" src="{{ restaurant.image }}" alt="{{ restaurant.name }} image">
+            <h2 >{{ restaurant.name }}</h2>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 </body>
 <script src="{% static 'js/homepage.js' %}"></script>
 </html>
