--- a/YumYumDeliv/yum_deliv/templates/Operator.html
+++ b/YumYumDeliv/yum_deliv/templates/Operator.html
@@ -10,19 +10,32 @@
 </head>
 <body>
 
+<header class="header-main">
+    <nav class="navbar">
+        <div class="row" style="width: 100%;">
+            <div class="col">
+                <img src="{% static 'res/logo.png' %}" alt="Logo">
+            </div>
+            <div class="col">
+                <a href="/" class="exit-link">Выход</a>
+            </div>
+        </div>
+    </nav>
+</header>
+
 <div class="container-fluid">
     <div class="row mt-3">
         <div class="col-md-4">
             <h2>Обращения</h2>
             <div class="list-group" id="return-requests-list">
                 <ul class="list-group">
-                   {% for feedback in feedbacks %}
-                        <li class="list-group-item feedback-list" data-feedback-id="{{ feedback.id }}">
-                            <div>#{{ feedback.id }}</div>
-                            <div>Номер заказа-{{ feedback.order_id }}</div>
-                            <div>Время обращения {{ feedback.datetime_feedback }}</div>
-                            <div></div>
-                        </li>
+                    {% for feedback in feedbacks %}
+                    <li class="list-group-item feedback-list" data-feedback-id="{{ feedback.id }}">
+                        <div>#{{ feedback.id }}</div>
+                        <div>Номер заказа-{{ feedback.order_id }}</div>
+                        <div>Время обращения {{ feedback.datetime_feedback }}</div>
+                        <div></div>
+                    </li>
                     {% endfor %}
                 </ul>
             </div>
@@ -36,33 +49,39 @@
                 <div class="card-body" id="request-details">
                     <ul class="list-group list-group-flush">
                         {% for feedback in feedbacks %}
-                            <div class="card mt-3" id="od-{{ feedback.id }}" hidden>
-                                <div class="card-body">
-                                    <h5 class="card-title">#{{ feedback.id }}</h5>
-                                    <form action="/sendResponse/{{ feedback.id }}" method="post">
-                                        {% csrf_token %}
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <p class="card-text"><strong>Comment:</strong> {{ feedback.comment }}</p>
-                                                <p class="card-text"><strong>Date and Time:</strong> {{ feedback.datetime_feedback }}</p>
-                                                <p class="card-text" id="email" name="email"><strong>Email:</strong> {{ feedback.email }}</p>
-                                                <input type="hidden" name="email" value="{{ feedback.email }}">
-                                                <p class="card-text"><strong>ID:</strong> {{ feedback.id }}</p>
-                                                <p class="card-text"><strong>Order ID:</strong> {{ feedback.order_id }}</p>
-                                                <p class="card-text"><strong>Reason:</strong> {{ feedback.reason }}</p>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <img src="{{ feedback.photo }}" class="img-fluid" alt="Feedback Photo" style="max-width: 400px; max-height: 500px">
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="responseTextArea">Ответ:</label>
-                                                <textarea class="form-control" id="responseTextArea" name="responseTextArea"></textarea>
-                                                <button class="btn btn-primary" type="submit" id="sendResponseBtn">Отправить ответ</button>
-                                            </div>
+                        <div class="card mt-3" id="od-{{ feedback.id }}" hidden>
+                            <div class="card-body">
+                                <h5 class="card-title">#{{ feedback.id }}</h5>
+                                <form action="/sendResponse/{{ feedback.id }}" method="post">
+                                    {% csrf_token %}
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <p class="card-text"><strong>Comment:</strong> {{ feedback.comment }}</p>
+                                            <p class="card-text"><strong>Date and Time:</strong> {{
+                                                feedback.datetime_feedback }}</p>
+                                            <p class="card-text" id="email" name="email"><strong>Email:</strong> {{
+                                                feedback.email }}</p>
+                                            <input type="hidden" name="email" value="{{ feedback.email }}">
+                                            <p class="card-text"><strong>ID:</strong> {{ feedback.id }}</p>
+                                            <p class="card-text"><strong>Order ID:</strong> {{ feedback.order_id }}</p>
+                                            <p class="card-text"><strong>Reason:</strong> {{ feedback.reason }}</p>
                                         </div>
-                                    </form>
-                                </div>
+                                        <div class="col-md-6">
+                                            <img src="{{ feedback.photo }}" class="img-fluid" alt="Feedback Photo"
+                                                 style="max-width: 400px; max-height: 500px">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="responseTextArea">Ответ:</label>
+                                            <textarea class="form-control" id="responseTextArea"
+                                                      name="responseTextArea"></textarea>
+                                            <button class="btn btn-primary" type="submit" id="sendResponseBtn">Отправить
+                                                ответ
+                                            </button>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
+                        </div>
                         {% endfor %}
                     </ul>
                 </div>
