--- a/YumYumDeliv/yum_deliv/templates/Resataurant.html
+++ b/YumYumDeliv/yum_deliv/templates/Resataurant.html
@@ -6,35 +6,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant</title>
-     <link rel="stylesheet" href="{% static 'css/resataurant.css' %}">
+    <link rel="stylesheet" href="{% static 'css/resataurant.css' %}">
+    <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
+    <script src="https://kit.fontawesome.com/680b9acf9e.js" crossorigin="anonymous"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=f40eb2dc-380d-4826-8076-4c07290dc00b&lang=ru_RU"
+            type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
 </head>
 <body>
-    {% csrf_token %}
-    <h1>Restaurant Page</h1>
+{% csrf_token %}
+<header class="header-main">
+    <nav class="navbar">
+        <div class="row" style="align-items: center;">
+            {% block header %}{% include 'header_template.html' %}{% endblock %}
+        </div>
+    </nav>
+</header>
 
-    <ul id="dishes-list">
-    {% for dish in dishes %}
-        <li>
-            <img src="{{ dish.photo }}" alt="{{ dish.name }}">
-            <div class="dish-info">
-                <div>
-                    <strong>{{ dish.name }}</strong> - {{ dish.cost }} ₽
-                </div>
-                <div>
-                    <button type="button" onclick="addToCart('{{ dish.name }}', '{{ dish.photo }}','{{ dish.id }}', '{{ dish.cost }}')">Add to Cart</button>
+<div class="container-fluid">
+    <div class="row">
+        <!-- Колонка навигации -->
+        <div class="col-2" id="navigation">
+            <p><i class="fa-solid fa-arrow-left"></i> Все рестораны</p>
+            <p><strong>Меню</strong></p>
+            {% for type in type_dishes %}
+            <p><a href="#{{ type.name }}">{{ type.name }}</a></p>
+            {% endfor %}
+        </div>
+        <!-- Колонка основного контента -->
+        <div class="col-8 center_content" id="main-content">
+            <div class="image-container">
+                <div class="rest-logo">
+                    <img src="{{ restaurant.0.image }}" alt="{{ restaurant.0.name }}">
+                    <h1 class="rest-title">{{ restaurant.0.name }}</h1>
                 </div>
             </div>
-        </li>
-    {% endfor %}
-    </ul>
+            {% for type in type_dishes %}
+            <h2 id="{{ type.name }}">{{ type.name }}</h2>
+            <ul id="dishes-list" class="row">
+                {% for dish in dishes %}
+                {% if dish.dish_type == type.id %}
+                <li class="col-md-3 col-dish">
+                    <div class="dish-container">
+                        <img class="dish-photo" src="{{ dish.photo }}" alt="{{ dish.name }}">
+                        <div class="dish-info">
+                            <div class="dish-price">{{ dish.cost }} ₽</div>
+                            <div class="dish-name">{{ dish.name }}</div>
+                            <div class="dish-weight">{{ dish.weight }} г</div>
+                            <button type="button" class="add-to-cart-button"
+                                    onclick="addToCart('{{ dish.name }}', '{{ dish.photo }}','{{ dish.id }}', '{{ dish.cost }}', '{{ dish.weight }}')">
+                                <i class="fa-solid fa-plus"></i>
+                                Добавить
+                            </button>
+                        </div>
+                    </div>
+                </li>
+                {% endif %}
+                {% endfor %}
+            </ul>
+            {% endfor %}
+        </div>
+        <!-- Колонка корзины -->
+        <div class="col-2 pr-0" id="cart-body">
+            <h2>Корзина</h2>
+            <p style="cursor: pointer;" onclick="clearCart()">Очистить</p>
+            <ul id="cart-list"></ul>
+            <button id="btn_place" onclick="location.href='{% url 'ordered' %}'">Оформить заказ</button>
+        </div>
+    </div>
+</div>
 
-    <h2>Cart</h2>
-    <ul id="cart-list"></ul>
-
-    <button type="button" id="btn_clear" onclick="clearCart()">Clear Cart</button>
-    <button type="button" id="btn_place" onclick="location.href='{% url 'ordered' %}'">Place Order</button>
-
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="{% static 'js/resataurant.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="{% static 'js/homepage.js' %}"></script>
+<script src="{% static 'js/resataurant.js' %}"></script>
 </body>
 </html>
