--- a/YumYumDeliv/yum_deliv/templates/UserOrders.html
+++ b/YumYumDeliv/yum_deliv/templates/UserOrders.html
@@ -7,8 +7,11 @@
     <title>User Orders</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/user_order.css' %}">
+    <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
 </head>
 <body>
+
+
 
 <div class="container mt-5">
     <div class="row">
@@ -16,13 +19,13 @@
             <h2>Список заказов</h2>
             <ul class="list-group">
                 {% for order in orders %}
-                    <li class="list-group-item order-list" id="md-{{ order.id }}" data-order-id="{{ order.id }}">
-                        <div>Заказ #{{ order.id }}</div>
-                        <div>Время заказа {{ order.data_time }}</div>
-                        <div>{{ order.order_status }}</div>
-                        <div>Сумма заказа {{ order.summa }} ₽</div>
-                        <div></div>
-                    </li>
+                <li class="list-group-item order-list" id="md-{{ order.id }}" data-order-id="{{ order.id }}">
+                    <div>Заказ #{{ order.id }}</div>
+                    <div>Время заказа {{ order.data_time }}</div>
+                    <div>{{ order.order_status }}</div>
+                    <div>Сумма заказа {{ order.summa }} ₽</div>
+                    <div></div>
+                </li>
                 {% endfor %}
             </ul>
         </div>
@@ -30,42 +33,42 @@
             <h2>Информация о заказе</h2>
             <div id="order-details">
                 {% for order in orders %}
-                    <div id="od-{{ order.id }}" hidden class="card mt-3">
-                        <div class="card-body">
-                            <h5 class="card-title">Информация о заказе #{{ order.id }}</h5>
-                            <p class="card-text"><strong>Комментарий:</strong> {{ order.comment }}</p>
-                            <p class="card-text"><strong>Курьер:</strong> {{ order.courier }}</p>
-                            <p class="card-text"><strong>Время оформления:</strong> {{ order.data_time }}</p>
-                            <p class="card-text"><strong>Адрес:</strong> {{ order.street }}, {{ order.house }},
-                                Подъезд: {{ order.entrance }}, Этаж: {{ order.floor }}, Квартира: {{ order.house }}
-                            </p>
-                            <h5 class="card-title mt-3">Состав заказа</h5>
-                            <div class="card">
-                                <ul class="list-group list-group-flush">
-                                    {% for dish in order.dishes %}
-                                        <li class="list-group-item">
-                                            <img src="{{ dish.photo }}" alt="{{ dish.name }}" class="img-thumbnail">
-                                            <strong>{{ dish.name }}</strong>
-                                            <p>Количество: {{ dish.quantity }}</p>
-                                            <p>Цена: {{ dish.cost }} ₽</p>
-                                        </li>
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                            <button type="button" class="btn btn-primary mt-3" data-toggle="modal"
-                                    data-target="#supportModal">
-                                Поддержка
-                            </button>
-                            <button type="button" class="btn btn-primary mt-3" data-toggle="modal"
-                                    data-order="{{ order.id }}" onclick="deleteOrder('{{ order.id }}')">
-                                Удалить заказ
-                            </button>
-                            <button type="button" class="btn btn-primary mt-3" data-toggle="modal"
-                                    data-repit-order="{{ order.id }}">
-                                Повторить
-                            </button>
+                <div id="od-{{ order.id }}" hidden class="card mt-3">
+                    <div class="card-body">
+                        <h5 class="card-title">Информация о заказе #{{ order.id }}</h5>
+                        <p class="card-text"><strong>Комментарий:</strong> {{ order.comment }}</p>
+                        <p class="card-text"><strong>Курьер:</strong> {{ order.courier }}</p>
+                        <p class="card-text"><strong>Время оформления:</strong> {{ order.data_time }}</p>
+                        <p class="card-text"><strong>Адрес:</strong> {{ order.street }}, {{ order.house }},
+                            Подъезд: {{ order.entrance }}, Этаж: {{ order.floor }}, Квартира: {{ order.house }}
+                        </p>
+                        <h5 class="card-title mt-3">Состав заказа</h5>
+                        <div class="card">
+                            <ul class="list-group list-group-flush">
+                                {% for dish in order.dishes %}
+                                <li class="list-group-item">
+                                    <img src="{{ dish.photo }}" alt="{{ dish.name }}" class="img-thumbnail">
+                                    <strong>{{ dish.name }}</strong>
+                                    <p>Количество: {{ dish.quantity }}</p>
+                                    <p>Цена: {{ dish.cost }} ₽</p>
+                                </li>
+                                {% endfor %}
+                            </ul>
                         </div>
+                        <button type="button" class="btn btn-primary mt-3" data-toggle="modal"
+                                data-target="#supportModal">
+                            Поддержка
+                        </button>
+                        <button type="button" class="btn btn-primary mt-3" data-toggle="modal"
+                                data-order="{{ order.id }}" onclick="deleteOrder('{{ order.id }}')">
+                            Удалить заказ
+                        </button>
+                        <button type="button" class="btn btn-primary mt-3" data-toggle="modal"
+                                data-repit-order="{{ order.id }}">
+                            Повторить
+                        </button>
                     </div>
+                </div>
                 {% endfor %}
             </div>
         </div>
@@ -90,19 +93,23 @@
                     </div>
                     <div class="form-group">
                         <label for="email">Email для связи:</label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="Введите ваш email">
+                        <input type="email" class="form-control" id="email" name="email"
+                               placeholder="Введите ваш email">
                     </div>
                     <div class="form-group">
                         <label for="reason">Причина обращения:</label>
-                        <input type="text" class="form-control" id="reason" name="reason" placeholder="Укажите причину обращения">
+                        <input type="text" class="form-control" id="reason" name="reason"
+                               placeholder="Укажите причину обращения">
                     </div>
                     <div class="form-group">
                         <label for="comment">Комментарий:</label>
-                        <textarea class="form-control" id="comment" name="comment" rows="3" placeholder="Оставьте комментарий к обращению"></textarea>
+                        <textarea class="form-control" id="comment" name="comment" rows="3"
+                                  placeholder="Оставьте комментарий к обращению"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="attachment">Прикрепить фото:</label>
-                        <input type="file" class="form-control-file" id="attachment" name="attachment" accept="image/*" multiple>
+                        <input type="file" class="form-control-file" id="attachment" name="attachment" accept="image/*"
+                               multiple>
                         <div id="attachmentPreview"></div>
                     </div>
                     <button type="submit" class="btn btn-primary">Отправить</button>
